[gd_scene load_steps=4 format=3 uid="uid://do0rxoyr1gsmk"]

[ext_resource type="Script" path="res://connector.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b7i0qho85mc4e" path="res://godot_chaser.tscn" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
resource_local_to_scene = true
size = Vector2(48, 30)

[node name="Connector" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(24, 0, -24, 0)
width = 30.0
default_color = Color(0.4, 0.501961, 1, 1)

[node name="destination_collision" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Label" type="Label" parent="destination_collision"]
visible = false
offset_left = 24.0
offset_top = -16.0
offset_right = 64.0
offset_bottom = -2.0
text = "asdf"

[node name="follower" parent="." instance=ExtResource("2")]
visible = false
position = Vector2(24, 0)

[connection signal="area_entered" from="." to="." method="_on_Connector_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="input_event" from="." to="." method="_on_Connector_input_event"]
